# TXEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
EngineTest/: CMakeLists.txt
EngineTest/src/: main.cpp
TXEngine/: CMakeLists.txt
TXEngine/include/TXEngine/: Audio.hpp  Event.hpp  Export.hpp  Graphics.hpp  OpenGL.hpp  TXEngine.hpp  Util.hpp
TXEngine/include/TXEngine/Audio/: AlUtil.hpp  Sound.hpp
TXEngine/include/TXEngine/Event/: CloseEvent.hpp  EventBase.hpp  EventType.hpp  Key.hpp  KeyPressEvent.hpp  KeyReleaseEvent.hpp  MouseButton.hpp  MouseButtonPressEvent.hpp  MouseButtonReleaseEvent.hpp  MouseMoveEvent.hpp  ResizeEvent.hpp  TextEnterEvent.hpp
TXEngine/include/TXEngine/Graphics/: CircleShape.hpp  Color.hpp  Drawable.hpp  Font.hpp  RectangleShape.hpp  Shape.hpp  Text.hpp  Texture.hpp  TextureTarget.hpp  Viewport.hpp  Window.hpp
TXEngine/include/TXEngine/OpenGL/: BufferBase.hpp  GLUtil.hpp  IBind.hpp  IndexBuffer.hpp  Shader.hpp  Vertex.hpp  VertexArrayBuffer.hpp  VertexBuffer.hpp
TXEngine/include/TXEngine/Util/: Clock.hpp  String.hpp  Vector.hpp
TXEngine/src/TXEngine/Audio/: AlUtil.cpp  Sound.cpp
TXEngine/src/TXEngine/Event/: CloseEvent.cpp  EventBase.cpp  KeyPressEvent.cpp  KeyReleaseEvent.cpp  MouseButtonPressEvent.cpp  MouseButtonReleaseEvent.cpp  MouseMoveEvent.cpp  ResizeEvent.cpp  TextEnterEvent.cpp
TXEngine/src/TXEngine/Graphics/: CircleShape.cpp  Color.cpp  Font.cpp  RectangleShape.cpp  Shape.cpp  Text.cpp  Texture.cpp  TextureTarget.cpp  Viewport.cpp  Window.cpp
TXEngine/src/TXEngine/OpenGL/: GLUtil.cpp  IndexBuffer.cpp  Shader.cpp  Vertex.cpp  VertexArrayBuffer.cpp  VertexBuffer.cpp
TXEngine/src/TXEngine/Util/: Clock.cpp  String.cpp
